logging all reward terms individually

--- a/tdmpc2/tdmpc2/config.yaml
+++ b/tdmpc2/tdmpc2/config.yaml
@@ -1,6 +1,9 @@
 defaults:
     - override hydra/launcher: submitit_local
 
+# extended evaluation
+log_everything: false
+
 # environment
 task: dog-run
 obs: state
